# notes

./: .gitignore  CMakeLists.txt  Main.qml  copyToken.sh  example.db  main.cpp  main.py  notebook_database.db  runDatabase.sh  setToken.sh
data/categories/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+44 more)
data/guidialogs/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/notes/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+52 more)
data/people/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+1610 more)
resources/: resources.qrc
src/backend/: APIs.py  controller.py  database_classes.py  example.db  json_generator.py  main_config_database_vars.py  table_schemas.py  utils.py  xx.py
src/backend/database/: APIs.py  controller.py  database_classes.py  example.db  json_generator.py  main_config_database_vars.py  main_site_route.py  property_utils.py  table_schemas.py  utils.py
src/backend/database/constants/: api_data.py  attribute_dep_names.py  information_texts.py  tables_names.py
src/backend/database/seeders/: __init__.py  category_seeder.py  dialog_seeder.py  main_seeder.py  notes_seeder.py  person_seeder.py  seeder_base.py
src/backend/database/tables/: __init__.py  base.py  category.py  guidialogs.py  ids.py  notes.py  person.py  schema.py
src/backend/datamanager/: dataclient.h  filedataclient.cpp  filedataclient.h  filedataclientadapter.cpp  filedataclientadapter.h  filemanager.cpp  filemanager.h  serverdataclient.cpp  serverdataclient.h
src/backend/datamanager/directobjsmanagers/: basicdatabasedata.cpp  basicdatabasedata.h  basicstructure.cpp  basicstructure.h  overallmanager.cpp  overallmanager.h  personmanager.cpp  personmanager.cpp.xrzBXa  personmanager.h
src/backend/datamanager/directobjsmanagers/categories/: categoriesmanager.cpp  categoriesmanager.h  category.h
src/backend/datamanager/directobjsmanagers/guidialogs/: guidialog.h  guidialogmanager.cpp  guidialogmanager.h
src/backend/datamanager/directobjsmanagers/ids/: ids.h  idsmanager.cpp  idsmanager.h
src/backend/datamanager/directobjsmanagers/notes/: note.h  notesmanager.cpp  notesmanager.h
src/backend/datamanager/directobjsmanagers/people/: peoplemanager.cpp  peoplemanager.h  person.h
src/backend/datamanager/pathmanager/: path.cpp  path.h
src/backend/tables/: base.py  category.py  notes.py  person.py  schema.py
src/controller/: abstract_data_client.cpp  abstract_data_client.h
src/gui/: ButtonSwitcher.qml  ButtonText.qml  CloseButton.qml  CustomButton.qml  EntryField.qml  GUIConfig.qml  LoginRepeater.qml  LoginView.qml  RectangleSolidBorder.qml  RegisterView.qml  SignUpLoginView.qml  SwitchButton.qml  TitleBox.qml  customlistviewmodel.cpp  customlistviewmodel.h  log_controller.cpp  log_controller.h  mycontroller.cpp  mycontroller.h  qmldir  registerboxmodel.cpp  registerboxmodel.h  statuses.h
src/gui/calendar/: Clock.qml  DateChooser.qml  TumblerComponent.qml  calendarcontroller.cpp  calendarcontroller.h  clockcontroller.cpp  clockcontroller.h
src/gui/colorpicker/: ColorPicker.qml  SingleColorPicker.qml  TripleColorPicker.qml  colorpicker.cpp  colorpicker.h
src/gui/cpputils/: utils.cpp  utils.h
src/gui/customdialog/: CustomDialog.qml  dialogcontroller.cpp  dialogcontroller.h
src/gui/maincontroller/: databasecontroller.cpp  databasecontroller.h  maincontroller.cpp  maincontroller.h
src/gui/models/: calendarmodel.h  entryfieldmodel.h  radiobuttonmodel.h  switchermodel.h  userviewlistmodel.cpp  userviewlistmodel.h
src/gui/modelutils/: adaptermodel.cpp  adaptermodel.h  customlistmodel.cpp  customlistmodel.h  customlistmodelregistering.h  invokablelistmodel.cpp  invokablelistmodel.h  listmodelbuilder.h
src/gui/notebook/: CategoryView.qml  ContentLabel.qml  NotebookListViewElement.qml  categorycontroller.cpp  categorycontroller.h  texteditorcontroller.h
src/gui/notebook/category/: CategoryView.qml  NotebookListViewElement.qml  categorycontroller.cpp  categorycontroller.h
src/gui/notebook/notes/: NotesShortView.qml  notescontroller.h
src/gui/qmlutils/: ButtonSwitcher.qml  ButtonText.qml  CustomButton.qml  CustomDial.qml  CustomRadioButton.qml  EntryField.qml  SwipeInComponent.qml  TitleBox.qml
src/gui/radiobutton/: CustomRadioButton.qml  radiobuttoncontroller.cpp  radiobuttoncontroller.h
src/gui/usereditview/: ButtonWithImage.qml  EntryLabel.qml  MainUserView.qml  UserEditListView.qml  UserEditView.qml  UserProfileView.qml  mainusercontroller.cpp  mainusercontroller.h  usereditcontroller.cpp  usereditcontroller.h
src/gui/userview/: ConfirmButton.qml  LogView.qml  LogView.qml.bRBQEn  LogViewEntryPart.qml  entrycontroller.cpp  entrycontroller.h  logcontroller.cpp  logcontroller.h  userconfigcontroller.cpp  userconfigcontroller.h
src/gui/userview/specificcontrollers/: guestcontroller.cpp  guestcontroller.h  logincontroller.cpp  logincontroller.h  registercontroller.cpp  registercontroller.h
src/gui/viewcontroller/: viewcontroller.cpp  viewcontroller.h
(+4 files in other folders)
